--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "google-maps-react": "^2.0.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-drag-drawer": "^3.3.1",
     "react-google-maps": "^9.4.5",
+    "react-responsive-modal": "^4.0.1",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "reactjs-popup": "^1.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
