--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "firebase": "^6.3.0",
     "google-maps-react": "^2.0.2",
+    "html2pdf.js": "^0.9.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-drag-drawer": "^3.3.1",
