--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "cors": "^2.8.5",
     "firebase": "^6.3.0",
+    "geopackage": "^1.0.2",
     "google-maps-react": "^2.0.2",
     "html2pdf.js": "^0.9.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-drag-drawer": "^3.3.1",
+    "react-file-reader": "^1.1.4",
     "react-firebase-file-uploader": "^2.4.2",
     "react-google-maps": "^9.4.5",
     "react-metismenu": "^1.4.0",
