--- a/.env
+++ b/.env
@@ -6,9 +6,11 @@ REACT_APP_FIREBASE_CONFIG = {
   storageBucket: "geoinfra2.appspot.com",
   messagingSenderId: "96025426007",
   appId: "1:96025426007:web:55b1dcfa5a849d96"
-};
+}
 
-REACT_APP_URL_SERVER_UPLOAD = "http://localhost:8000/upload"
+REACT_APP_URL_SERVER_UPLOAD_AGUA = "http://localhost:8000/uploadagua"
+REACT_APP_URL_SERVER_UPLOAD_GAS = "http://localhost:8000/uploadgas"
+REACT_APP_URL_SERVER_UPLOAD_ESGOTO = "http://localhost:8000/uploadESGOTO"
 
 REACT_APP_URI_GOOGLE_MAPS = "AIzaSyDI8rhCfDYeRozbap8tk0tCgVqq3i9Y40A"
 
