--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-responsive-modal": "^4.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
-    "reactjs-popup": "^1.4.1"
+    "reactjs-popup": "^1.4.1",
+    "node": "v8.10.0"
   },
   "scripts": {
     "start": "react-scripts start",
