--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "react-responsive-modal": "^4.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
-    "reactjs-popup": "^1.4.1",
-    "node": "^10.1.0"
+    "reactjs-popup": "^1.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
