--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "infra",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "8.10.0"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
