--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "geopackage": "^1.0.2",
     "google-maps-react": "^2.0.2",
     "html2pdf.js": "^0.9.1",
+    "node": "^8.10.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-drag-drawer": "^3.3.1",
