--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-google-maps": "^9.4.5",
     "react-metismenu": "^1.4.0",
     "react-metismenu-router-link": "^2.1.0",
+    "react-places-autocomplete": "^7.2.1",
     "react-responsive-modal": "^4.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
