--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "node": "8.10.0"
   },
   "dependencies": {
+    "@google-cloud/storage": "^3.1.0",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "firebase": "^6.3.0",
     "geopackage": "^1.0.2",
     "google-maps-react": "^2.0.2",
     "html2pdf.js": "^0.9.1",
+    "multer": "^1.4.2",
     "node": "^8.10.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
